feat: remove mark paid api
