# route/biz/router/hewo/tikshop/route/order/order.go
@@ -22,6 +22,5 @@ func Register(r *server.Hertz) {
 	_order.GET("/:id", append(_getorderMw(), order.GetOrder)...)
 	_id := _order.Group("/:id", _idMw()...)
 	_id.POST("/cancel", append(_cancelorderMw(), order.CancelOrder)...)
-	_id.POST("/mark_paid", append(_markorderpaidMw(), order.MarkOrderPaid)...)
 	root.POST("/order", append(_createorderMw(), order.CreateOrder)...)
 }
